Fixing alignment

--- a/src/Home.css
+++ b/src/Home.css
@@ -14,7 +14,6 @@
     align-items: center;
     gap: 20px;
     width: 100%;
-    margin-top: 20px;
 }
 
 .about-me-image {
@@ -47,37 +46,33 @@
     transition: none;
 }
 
-.project {
+.home-project {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
     border-radius: 5px;
     height: 350px;
     position: relative;
+    text-align: center;
 }
 
-.project img {
+.home-project img {
     width: 100%;
     height: 150px;
     object-fit: contain;
     border-radius: 5px;
 }
 
-.project h3 {
+.home-project h3,
+.home-project p {
     margin: 10px 0;
-    flex-grow: 1;
 }
 
-.project p {
-    margin: 10px 0;
-    flex-grow: 1;
-}
-
-.project .read-more-btn {
+.home-project .read-more-btn {
     position: absolute;
     bottom: 10px;
     left: 50%;
